--- a/emailTemplate.html
+++ b/emailTemplate.html
@@ -1,129 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <base target="_top">
 </head>
 
-<body>
-  <center>
-    <table
-      style="border-collapse:collapse;height:100%;margin:0px;padding:0px;width:100%;background-color:rgb(242, 242, 242);"
-      width="100%" height="100%" cellspacing="0" cellpadding="0" border="0" align="center">
-      <tbody>
-        <tr>
-          <td style="height:100%;padding:10px;width:100%;border-top:0px;" valign="top" align="center">
-            <table style="border-collapse:collapse;border:0px;max-width:600px;" width="100%" cellspacing="0"
-              cellpadding="0" border="0">
-              <tbody>
-                <tr>
-                  <td
-                    style="background:none 50% 50% / cover no-repeat rgb(255, 255, 255);border-top:0px;border-bottom:0px;padding-top:10px;padding-bottom:15px;"
-                    valign="top">
-                    <table style="min-width:100%;border-collapse:collapse;" width="100%" cellspacing="0" cellpadding="0"
-                      border="0">
-                      <tbody>
-                        <tr>
-                          <td style="padding:9px;" valign="top">
-                            <table style="min-width:100%;border-collapse:collapse;" width="100%" cellspacing="0"
-                              cellpadding="0" border="0" align="left">
-                              <tbody>
-                                <tr>
-                                  <td style="padding:0px 9px;" valign="top"><img alt="" src="https://ci6.googleusercontent.com/proxy/h9njXK3mllYy_7gMz4cP0NM0BxxxRAQ5ioBxUdJYtmRv1hU1TSKJAaP584AykBcLNRJYOWbMuHYUF-QuDxeR7mO6OnxqnzarGgxD7KrJ-yEq2NCsjb2bW9jfqhdh9YxzU5Wz5p5cfYz6qqDybm1KzlxFs0XQdBT7ILg=s0-d-e1-ft#https://gallery.mailchimp.com/656fbe8d69172395c3bfc518a/images/1aef640b-0bc8-4eea-84d5-74078777589a.png" style="max-width:85px;padding-bottom:0px;vertical-align:bottom;border:0px;height:auto;outline:none;display:inline;" width="85" align="left">
-                                  </td>
-                                  <td style="padding:0px 9px;text-align:right;">
-                                    <h2 style="margin:0px;font-size:2.5em;">Hub de Información</h2>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    style="background:none 50% 50% / cover no-repeat rgb(34, 34, 34);border-top:0px;border-bottom:0px;padding-top:0px;padding-bottom:0px;"
-                    valign="top">
-                    <table style="min-width:100%;border-collapse:collapse;" width="100%" cellspacing="0" cellpadding="0"
-                      border="0">
-                      <tbody>
-                        <tr>
-                          <td style="padding-top:9px;" valign="top"></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    style="background:none 50% 50% / cover no-repeat rgb(255, 255, 255);border-top:0px;border-bottom:0px;padding-top:5px;padding-bottom:5px;"
-                    valign="top">
-                    <table style="min-width:100%;border-collapse:collapse;" width="100%" cellspacing="0" cellpadding="0"
-                      border="0">
-                      <tbody>
-                        <tr>
-                          <td valign="top">
-                            <table style="min-width:100%;border-collapse:collapse;" width="100%" cellspacing="0"
-                              cellpadding="0" border="0" align="left">
-                              <tbody>
-                                <tr>
-                                  <td style="padding:9px 18px 0 18px;">
-                                    <table style="border-collapse:collapse;min-width:100%;" width="100%" cellspacing="0"
-                                      border="0">
-                                      <tbody>
-                                        <tr>
-                                          <td
-                                            style="padding:18px;font-family:Helvetica;word-break:break-word;color: rgb(33, 35, 34);font-size: 14px;line-height: 150%;"
-                                            valign="top">
-                                            <h2 style="text-align: center; margin-top: 0px; margin-bottom: 35px;">
-                                              Confirmación de inscripción</h2>
-                                            <p>Hola <b> <?!= nombreUsuario ?>:</b></p>
-                                            <p>¡Gracias por tu interés en participar en nuestros seminarios!</p>
-                                            <p>Confirmamos tu inscripción en:</p>
-                                            <?!= descripcionTalleres ?>
-                                            <p>Ten presente las siguientes recomendaciones:</p>
-                                            <p></p>
-                                            <ul>
-                                              <li>Conéctate a la sala de Meet con tu<b> correo institucional</b>
-                                                (ejemplo@continental.edu.pe) para que puedas ingresar y participar de la
-                                                sesión.</li>
-                                              <li>Ingresa <b>5 minutos antes</b> para verificar tu coneción. Se recomienda limitar la actividad de internet en su casa u oficina (juegos en línea, servicios de streaming, etc.) para tener una <b>conexión óptima</b>.
-                                              </li>
-                                            </ul>
-                                            <div>
-                                              <p>Cualquier consulta por favor no dudes en escribirnos a: <a
-                                                  href="mailto:researchsupport@continental.edu.pe">researchsupport@continental.edu.pe</a>.<br>
-                                              </p>
-                                              <p style="text-align: center;"><b>¡Te esperamos!</b></p>
-                                            </div>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    style="color: white;background: none 50% 50% / cover no-repeat rgb(34, 34, 34);border-top: 0px;border-bottom: 0px;padding-top: 10px;font-size: 12px;text-align: center;"
-                    valign="top"><br></td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<body style="margin:0;padding:0;background-color:#f2f2f2;font-family:Helvetica,Arial,sans-serif;"">
+  <center style=" width:100%;background-color:#f2f2f2;">
+  <table role="presentation"
+    style="border-collapse:collapse;height:100%;margin:0;padding:0;width:100%;background-color:#f2f2f2;" width="100%"
+    height="100%" cellspacing="0" cellpadding="0" border="0" align="center">
+    <tbody>
+      <tr>
+        <td style="height:100%;padding:10px;width:100%;border-top:0;" valign="top" align="center">
+          <table role="presentation" style="border-collapse:collapse;border:0;max-width:600px;" width="100%"
+            cellspacing="0" cellpadding="0" border="0">
+            <tbody>
+              <!-- Header con logo -->
+              <tr>
+                <td style="background-color:#ffffff;border-top:0;border-bottom:0;padding-top:10px;padding-bottom:15px;"
+                  valign="top">
+                  <table role="presentation" style="min-width:100%;border-collapse:collapse;" width="100%"
+                    cellspacing="0" cellpadding="0" border="0">
+                    <tbody>
+                      <tr>
+                        <td style="padding:9px;" valign="top">
+                          <table role="presentation" style="min-width:100%;border-collapse:collapse;" width="100%"
+                            cellspacing="0" cellpadding="0" border="0" align="left">
+                            <tbody>
+                              <tr>
+                                <td style="padding:0 9px;" valign="top">
+                                  <img alt="Logo Universidad Continental"
+                                    src="https://ci6.googleusercontent.com/proxy/h9njXK3mllYy_7gMz4cP0NM0BxxxRAQ5ioBxUdJYtmRv1hU1TSKJAaP584AykBcLNRJYOWbMuHYUF-QuDxeR7mO6OnxqnzarGgxD7KrJ-yEq2NCsjb2bW9jfqhdh9YxzU5Wz5p5cfYz6qqDybm1KzlxFs0XQdBT7ILg=s0-d-e1-ft#https://gallery.mailchimp.com/656fbe8d69172395c3bfc518a/images/1aef640b-0bc8-4eea-84d5-74078777589a.png"
+                                    style="max-width:85px;padding-bottom:0;vertical-align:bottom;border:0;height:auto;outline:none;display:inline;"
+                                    width="85" align="left">
+                                </td>
+                                <td style="padding:0 9px;text-align:right;" valign="middle">
+                                  <h2 style="margin:0;font-size:2.5em;color:#212322;">Hub de Información</h2>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+
+              <!-- Separador decorativo -->
+              <tr>
+                <td style="background-color:#222222;border-top:0;border-bottom:0;padding-top:0;padding-bottom:0;"
+                  valign="top">
+                  <table role="presentation" style="min-width:100%;border-collapse:collapse;" width="100%"
+                    cellspacing="0" cellpadding="0" border="0">
+                    <tbody>
+                      <tr>
+                        <td style="padding-top:9px;" valign="top"></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+
+              <!-- Contenido principal -->
+              <tr>
+                <td style="background-color:#ffffff;border-top:0;border-bottom:0;padding-top:5px;padding-bottom:5px;"
+                  valign="top">
+                  <table role="presentation" style="min-width:100%;border-collapse:collapse;" width="100%"
+                    cellspacing="0" cellpadding="0" border="0">
+                    <tbody>
+                      <tr>
+                        <td valign="top">
+                          <table role="presentation" style="min-width:100%;border-collapse:collapse;" width="100%"
+                            cellspacing="0" cellpadding="0" border="0" align="left">
+                            <tbody>
+                              <tr>
+                                <td style="padding:9px 18px 0 18px;">
+                                  <table role="presentation" style="border-collapse:collapse;min-width:100%;"
+                                    width="100%" cellspacing="0" border="0">
+                                    <tbody>
+                                      <tr>
+                                        <td
+                                          style="padding:18px;font-family:Helvetica,Arial,sans-serif;word-break:break-word;color:#212322;font-size:14px;line-height:150%;"
+                                          valign="top">
+                                          <h2
+                                            style="text-align:center;margin-top:0;margin-bottom:35px;color:#212322;font-size:24px;">
+                                            Confirmación de inscripción</h2>
+                                          <p style="margin:0 0 10px 0;">Hola <b>
+                                              <?!= nombreUsuario ?>:
+                                            </b></p>
+                                          <p style="margin:0 0 10px 0;">¡Gracias por tu interés en participar en
+                                            nuestros seminarios!</p>
+                                          <p style="margin:0 0 10px 0;">Confirmamos tu inscripción en:</p>
+                                          <?!= descripcionTalleres ?>
+                                          <p style="margin:20px 0 10px 0;"><b>Ten presente las siguientes
+                                              recomendaciones:</b></p>
+                                          <ul style="margin:0 0 20px 0;padding-left:20px;">
+                                            <li style="margin-bottom:10px;">Conéctate a la sala de Meet con tu <b>correo
+                                                institucional</b>
+                                              (ejemplo@continental.edu.pe) para que puedas ingresar y participar de la
+                                              sesión.</li>
+                                            <li style="margin-bottom:10px;">Ingresa <b>5 minutos antes</b> para
+                                              verificar tu conexión. Se recomienda limitar la actividad de internet en
+                                              su casa u oficina (juegos en línea, servicios de streaming, etc.) para
+                                              tener una <b>conexión óptima</b>.
+                                            </li>
+                                          </ul>
+                                          <div>
+                                            <p style="margin:0 0 10px 0;">Cualquier consulta por favor no dudes en
+                                              escribirnos a: <a href="mailto:researchsupport@continental.edu.pe"
+                                                style="color:#0066cc;text-decoration:underline;">researchsupport@continental.edu.pe</a>
+                                            </p>
+                                            <p style="text-align:center;margin:20px 0 0 0;"><b>¡Te esperamos!</b></p>
+                                          </div>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </td>
+              </tr>
+
+              <!-- Footer -->
+              <tr>
+                <td
+                  style="color:#ffffff;background-color:#222222;border-top:0;border-bottom:0;padding:20px 10px;font-size:12px;text-align:center;"
+                  valign="top">
+                  <p style="margin:0;color:#ffffff;">Universidad Continental - Hub de Información</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   </center>
 </body>
 
